--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack --hostname 192.168.0.72",
+    "dev": "next dev --hostname 192.168.0.72",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,8 +12,10 @@
     "@supabase/supabase-js": "^2.50.0",
     "autoprefixer": "^10.4.21",
     "framer-motion": "^12.18.1",
+    "gray-matter": "^4.0.3",
     "iron-session": "^8.0.4",
     "next": "14.2.4",
+    "next-mdx-remote": "^5.0.0",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.89.2",
