--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-mdx-remote": "^5.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "sass": "^1.89.2",
     "tailwindcss-animate": "^1.0.7"
   },
